...
    private func _setupView() {
        titleLbl.text = "Your Results"
        titleLbl.font = UIFont.systemFont(ofSize: 30, weight: .black)
        titleLbl.textAlignment = .center
        titleLbl.numberOfLines = 0
        
        continueBtn.setTitle("Home", for: .normal)
        continueBtn.titleLabel?.font = UIFont.systemFont(ofSize: 20, weight: .semibold)
        continueBtn.layer.cornerRadius = 10
        
        guard let quiz = quiz else { return }
        let newScore = quiz.correctAnswersCount * 100
        resultsLbl.text = "Your score: \(newScore)!"
...
